@@ -1,11 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Linux-Fuser
-version:      1.4
-version_from: lib/Linux/Fuser.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Linux-Fuser
+version:             1.5
+abstract:            ~
+license:             ~
+author:              
+    - Jonathan Stowe <jns@gellyfish.co.uk>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Test::More:                    
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
