@@ -1,4 +1,4 @@
-Linux/Fuser README
+Linux::Fuser README
 ========================
 
 This module attempts to provide some of the functionality of the Unix
@@ -24,7 +24,15 @@ DEPENDENCIES
 
 This module has no dependencies other than it will almost certainly only
 work on a Linux system with a /proc filesystem compatible with the one
-found with the 2.2.* kernel.
+found with the 2.2.* kernel, there are some features that may become available
+to new kernel versions.
+
+SOURCE CODE
+
+The source code for this module is hosted on Google code. You can checkout
+the latest version via subversion from:
+
+  http://jstowe.googlecode.com/svn/trunk/Linux-Fuser/
 
 EXAMPLES
 
@@ -32,13 +40,11 @@ Then supplied 'pfuser' program shows the basic usage of this module.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C)2001 Jonathan Stowe <jns@gellyfish.com>
+Copyright (C)2001 - 2009 Jonathan Stowe <jns@gellyfish.co.uk>
 
 This software carries no warranty either express of implied.
 
 This is free software, it can be distributed and/or modified under the
 same terms as Perl itself.  The Perl license can be found in the file
 README in the Perl source distribution.
-
-
 
